[package]
name = "shards"
version = "0.1.0"
authors = ["Aernom"]
description = "Small Rust utilities"
homepage = "https://github.com/Aernom/shards.git"
repository = "https://github.com/Aernom/shards.git"
edition = "2021"

[features]
default = ["colorize", "commands"]

colorize = []
commands = []

[dependencies]
