[package]
name = "shards"
version = "0.4.0"
authors = ["aernom"]
description = "Small Rust utilities"
homepage = "https://github.com/aernom/shards.git"
repository = "https://github.com/aernom/shards.git"
edition = "2021"

[features]
default = ["colorize", "commands"]

colorize = []
commands = []

[dependencies]
